move js to scripts dir
Signed-off-by: ryagi <ryagius17@gmail.com>

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -18,9 +18,9 @@
     <link rel="icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/65742f5eadd857659de51dec/270506aa-aff7-436f-9be1-d539b086e461/favicon.ico?format=100w">
     <link rel="stylesheet" type="text/css" href="theme.css">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-    <script src="keyboard.js"></script>
-    <script src="input.js"></script>
-    <script src="webrtc.js"></script>
+    <script src="scripts/keyboard.js"></script>
+    <script src="scripts/input.js"></script>
+    <script src="scripts/webrtc.js"></script>
     <script>window.onload = setup;</script>
   </head>
 
