prevent deletion of content div when stream ends
Signed-off-by: ryagi <ryagius17@gmail.com>

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -34,8 +34,8 @@
           <!-- Video Elements go here -->
           <div class="session" id="session-1">
             <video class="stream" id="stream-1" width="100%" height="100%" controls preload="none" autoplay playsinline> </video>
-            <p> ID: <span id="id-1"> UNKNOWN </span> </p>
-            <p> Status: <span id="status-1"> DISCONNECTED </span> </p>
+            <p> ID: <span id="id-1"> Unknown </span> </p>
+            <p> Status: <span id="status-1"> Disconnected </span> </p>
           </div>
   
         </div>
